examples/pass/bool_false.uplp
-- category = "value"
--
-- [metadata]
-- type = "Bool"
-- value = false
false