examples/fail/type_ascryption_mismatch.uplp
-- category = 'error'
--
-- [metadata]
-- error = 'Type.mismatch'
--
-- [metadata.expectation]
-- expected = "Num"
-- got = "Bool"
false : Num